# opus-parvulum

./: Cargo.toml  README.md
scripts/: symlink.ps1
src/: factory.rs  lib.rs  macros.rs  vst_str.rs
src/component/: controller.rs  dsp.rs  mod.rs  params.rs  processor.rs
src/effect/: controller.rs  dsp.rs  mod.rs  params.rs  processor.rs
